--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 streamlit>=1.29.0
 snowflake-snowpark-python>=1.12.0
 snowflake-connector-python>=3.6.0
+snowflake.core>=1.0.2
 
 # PDF Processing
 PyPDF2>=3.0.0
