--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -4,3 +4,4 @@ snowflake_account = "qaofcdp-edb17240"
 snowflake_warehouse = "Compute_WH"
 snowflake_database = "TestDB"
 snowflake_schema = "MySchema" 
+snowflake_role = "accountadmin"
