--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -2,6 +2,6 @@ snowflake_user = "ChaiRavi"
 snowflake_password = "Halonix@27"
 snowflake_account = "qaofcdp-edb17240"
 snowflake_warehouse = "Compute_WH"
-snowflake_database = "TestDB"
-snowflake_schema = "MySchema" 
-snowflake_role = "accountadmin"
+snowflake_database = "TESTDB"
+snowflake_schema = "MYSCHEMA" 
+snowflake_role = "ACCOUNTADMIN"
