--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -5,3 +5,4 @@ snowflake_warehouse = "Compute_WH"
 snowflake_database = "TestDB"
 snowflake_schema = "MySchema" 
 snowflake_role = "AccountAdmin"
+MISTRAL_API_KEY = "tnxCC8C4jEntWmbGfb7hxVHO5rOE6V4q"
