--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ snowflake.core>=1.0.2
 # PDF Processing
 PyPDF2>=3.0.0
 python-docx>=0.8.11
+PyMuPDF>=1.25.1
 
 # Data processing and analysis
 numpy>=1.24.0
@@ -46,5 +47,6 @@ python-dotenv>=1.0.0
 uuid>=1.30
 python-json-logger>=2.0.7
 streamlit-pdf-viewer>=0.0.20
+st-clickable-images>=0.0.3
 ffmpeg-python>=0.2.0
 
